Add backend, frontend, model and configs

--- a/training/train_model.ipynb
+++ b/training/train_model.ipynb
@@ -819,14 +819,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7bf4e11b",
+   "execution_count": null,
+   "id": "eb003360",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unfreeze the top layers of MobileNetV2\n",
-    "for layer in base_model.layers[-30:]:\n",
-    "    layer.trainable = True\n"
+    "# Unfreeze the top layers of MobileNetV2 \n",
+    "for layer in base_model.layers[-30:]: \n",
+    "    layer.trainable = True"
    ]
   },
   {
